-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Stress testing revealed some issues:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/inlinetypenode.cpp:1134), pid=2656025, tid=2656038
# assert(false) failed: Unbuffered inline type should not have known instance id
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-03-1240228.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-03-1240228.tobias..., mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xfeb96f] InlineTypeNode::Value(PhaseGVN*) const+0x45f
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/compile.cpp:1703), pid=2659682, tid=2659690
# assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr: adr_type = NULL+104
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-03-1240228.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-03-1240228.tobias..., mixed mode, compressed oops, compressed class ptrs, serial gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb0f59d] Compile::find_alias_type(TypePtr const*, bool, ciField*, bool) [clone .part.0]+0x2bd
java.lang.NoClassDefFoundError: jdk/experimental/bytecode/BasicTypeHelper
at test.java.lang.invoke.lib.InstructionHelper.<clinit>(InstructionHelper.java:54)
at compiler.valhalla.inlinetypes.TestNullableInlineTypes.<clinit>(TestNullableInlineTypes.java:2536)
at java.base/jdk.internal.misc.Unsafe.ensureClassInitialized0(Native Method)
at java.base/jdk.internal.misc.Unsafe.ensureClassInitialized(Unsafe.java:1285)
at java.base/jdk.internal.reflect.MethodHandleAccessorFactory.ensureClassInitialized(MethodHandleAccessorFactory.java:300)
at java.base/jdk.internal.reflect.MethodHandleAccessorFactory.newMethodAccessor(MethodHandleAccessorFactory.java:71)
at java.base/jdk.internal.reflect.ReflectionFactory.newMethodAccessor(ReflectionFactory.java:159)
at java.base/java.lang.reflect.Method.acquireMethodAccessor(Method.java:722)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
at java.base/java.lang.Thread.run(Thread.java:1588)
Caused by: java.lang.ClassNotFoundException: jdk.experimental.bytecode.BasicTypeHelper
at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:641)
at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:188)
at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:521)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/inlinetypenode.cpp:1134), pid=2656025, tid=2656038
# assert(false) failed: Unbuffered inline type should not have known instance id
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-03-1240228.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-03-1240228.tobias..., mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xfeb96f] InlineTypeNode::Value(PhaseGVN*) const+0x45f
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/compile.cpp:1703), pid=2659682, tid=2659690
# assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr: adr_type = NULL+104
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-03-1240228.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-03-1240228.tobias..., mixed mode, compressed oops, compressed class ptrs, serial gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb0f59d] Compile::find_alias_type(TypePtr const*, bool, ciField*, bool) [clone .part.0]+0x2bd
java.lang.NoClassDefFoundError: jdk/experimental/bytecode/BasicTypeHelper
at test.java.lang.invoke.lib.InstructionHelper.<clinit>(InstructionHelper.java:54)
at compiler.valhalla.inlinetypes.TestNullableInlineTypes.<clinit>(TestNullableInlineTypes.java:2536)
at java.base/jdk.internal.misc.Unsafe.ensureClassInitialized0(Native Method)
at java.base/jdk.internal.misc.Unsafe.ensureClassInitialized(Unsafe.java:1285)
at java.base/jdk.internal.reflect.MethodHandleAccessorFactory.ensureClassInitialized(MethodHandleAccessorFactory.java:300)
at java.base/jdk.internal.reflect.MethodHandleAccessorFactory.newMethodAccessor(MethodHandleAccessorFactory.java:71)
at java.base/jdk.internal.reflect.ReflectionFactory.newMethodAccessor(ReflectionFactory.java:159)
at java.base/java.lang.reflect.Method.acquireMethodAccessor(Method.java:722)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
at java.base/java.lang.Thread.run(Thread.java:1588)
Caused by: java.lang.ClassNotFoundException: jdk.experimental.bytecode.BasicTypeHelper
at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:641)
at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:188)
at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:521)