8295152: [lworld] Various C2 compiler issues revealed by stress testing