src/hotspot/share/opto/callGenerator.cpp
@@ -823,6 +823,7 @@ void CallGenerator::do_late_inline_helper() {
 
           // Update oop input to buffer
           kit.gvn().hash_delete(vt);
+          vt->set_is_buffered();
           vt->set_oop(kit.gvn().transform(oop));
           vt = kit.gvn().transform(vt)->as_InlineType();
 
