test/hotspot/jtreg/compiler/valhalla/inlinetypes/TestLWorld.java
@@ -46,9 +46,9 @@ import static compiler.valhalla.inlinetypes.InlineTypes.*;
  * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @modules java.base/jdk.internal.value
+ * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
  * @compile -XDenablePrimitiveClasses MyValue5.jcod
  * @compile -XDenablePrimitiveClasses TestLWorld.java
- * @build test.java.lang.invoke.lib.InstructionHelper
  * @run main/othervm/timeout=450 -XX:+EnableValhalla -XX:+EnablePrimitiveClasses compiler.valhalla.inlinetypes.TestLWorld
  */
 
